team page modification

--- a/team.html
+++ b/team.html
@@ -737,19 +737,19 @@
 
                                     </li>
                                     <li>
-                                        <a href="https://creative-tim.com/presentation ">
-              About Us
-            </a>
+                                        <a href="index.html">
+                                            About Us
+                                        </a>
                                     </li>
                                     <li>
-                                        <a href="http://blog.creative-tim.com ">
-              Blog
-            </a>
+                                        <a href="">
+
+                                        </a>
                                     </li>
                                     <li>
-                                        <a href="https://www.creative-tim.com/license ">
-              Licenses
-            </a>
+                                        <a href="">
+
+                                        </a>
                                     </li>
                                 </ul>
                             </nav>
@@ -809,6 +809,7 @@
                                 template: '<i class="fab fa-facebook-f "></i> Facebook',
                                 url: 'https://demos.creative-tim.com/material-kit/index.html'
                             });
+
 
                             $('#googlePlus').sharrre({
                                 share: {
