--- a/team.html
+++ b/team.html
@@ -66,7 +66,7 @@
             </div>
         </div>
     </nav>
-    <div class="page-header header-filter clear-filter purple-filter" data-parallax="true" style="background-image: url('./assets/img/bg2.jpg');">
+    <div class="page-header header-filter clear-filter purple-filter" data-parallax="true" style="background-image: url('./assets/img/bg2.jpg'); height: 50vh;">
         <div class="container">
             <div class="row">
                 <div class="col-md-8 ml-auto mr-auto">
@@ -154,7 +154,7 @@
                                         </div>
                                         <h4 class="card-title">Kartik Bajaj
                                             <br>
-                                            <small class="card-description text-muted">General Secretary</small>
+                                            <small class="card-description text-muted">Joint Secretary</small>
                                         </h4>
                                         <div class="card-body">
                                             <p class="card-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores amet maxime velit, quae aliquam eveniet nostrum iure, porro labore accusantium eligendi laudantium soluta voluptatibus perspiciatis ea provident
@@ -272,7 +272,7 @@
                                             </div>
                                             <h4 class="card-title ">Abhishek Singla
                                                 <br>
-                                                <small class="card-description text-muted ">Joint Secretary</small>
+                                                <small class="card-description text-muted ">Management Head</small>
                                             </h4>
                                             <div class="card-body ">
                                                 <p class="card-description ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae temporibus rem eaque excepturi totam, incidunt reiciendis sit repellendus aperiam fugit!</p>
@@ -390,9 +390,9 @@
                                     <div class="team-player ">
                                         <div class="card card-plain ">
                                             <div class="col-md-6 ml-auto mr-auto ">
-                                                <img src="assets/img/puneet.jpg " alt="Thumbnail Image " class="img-raised rounded-circle img-fluid ">
+                                                <img src="assets/img/chirag.JPG" alt="Thumbnail Image " class="img-raised rounded-circle img-fluid ">
                                             </div>
-                                            <h4 class="card-title ">Puneet</h4>
+                                            <h4 class="card-title ">Chirag Khullar</h4>
 
                                         </div>
                                     </div>
@@ -401,9 +401,9 @@
                                     <div class="team-player ">
                                         <div class="card card-plain ">
                                             <div class="col-md-6 ml-auto mr-auto ">
-                                                <img src="assets/img/himanshu.jpg " alt="Thumbnail Image " class="img-raised rounded-circle img-fluid ">
+                                                <img src="assets/img/kanika.jpg" alt="Thumbnail Image " class="img-raised rounded-circle img-fluid ">
                                             </div>
-                                            <h4 class="card-title ">Himanshu Gupta</h4>
+                                            <h4 class="card-title ">Kanika Babbar</h4>
 
                                         </div>
                                     </div>
@@ -419,9 +419,9 @@
                                     <div class="team-player ">
                                         <div class="card card-plain ">
                                             <div class="col-md-6 ml-auto mr-auto ">
-                                                <img src="assets/img/chirag.JPG " alt="Thumbnail Image " class="img-raised rounded-circle img-fluid ">
+                                                <img src="assets/img/puneet.jpg" alt="Thumbnail Image " class="img-raised rounded-circle img-fluid ">
                                             </div>
-                                            <h4 class="card-title ">Chirag Khullar</h4>
+                                            <h4 class="card-title ">Puneet</h4>
 
 
                                         </div>
@@ -484,9 +484,9 @@
                                     <div class="team-player ">
                                         <div class="card card-plain ">
                                             <div class="col-md-6 ml-auto mr-auto ">
-                                                <img src="assets/img/kanika.jpg " alt="Thumbnail Image " class="img-raised rounded-circle img-fluid ">
+                                                <img src="assets/img/himanshu.jpg" alt="Thumbnail Image " class="img-raised rounded-circle img-fluid ">
                                             </div>
-                                            <h4 class="card-title ">Kanika Babbar</h4>
+                                            <h4 class="card-title ">Himanshu Gupta</h4>
 
 
                                         </div>
@@ -772,4 +772,4 @@
             </script>
 </body>
 
-</html>
+</html>z
