--- a/team.html
+++ b/team.html
@@ -95,8 +95,9 @@
                                             <small class="card-description text-muted">General Secretary</small>
                                         </h4>
                                         <div class="card-body">
-                                            <p class="card-description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quasi, architecto nam ab ratione, consectetur aperiam magni sit nobis eaque, quas illo sapiente! Repellendus beatae voluptatibus at non fugit aliquam
-                                                inventore.
+                                            <p class="card-description">
+                                                    Set your worthwhile goals, work hard and be the best version of you.
+                                                    That's all
                                             </p>
                                         </div>
                                     </div>
@@ -139,8 +140,8 @@
                                             <small class="card-description text-muted">Joint Secretary</small>
                                         </h4>
                                         <div class="card-body">
-                                            <p class="card-description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quasi, architecto nam ab ratione, consectetur aperiam magni sit nobis eaque, quas illo sapiente! Repellendus beatae voluptatibus at non fugit aliquam
-                                                inventore.
+                                            <p class="card-description">
+                                                    Sometimes, Science is more art than Science, Morty.
                                             </p>
                                         </div>
                                     </div>
@@ -157,8 +158,7 @@
                                             <small class="card-description text-muted">Joint Secretary</small>
                                         </h4>
                                         <div class="card-body">
-                                            <p class="card-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores amet maxime velit, quae aliquam eveniet nostrum iure, porro labore accusantium eligendi laudantium soluta voluptatibus perspiciatis ea provident
-                                                officia. Corrupti, possimus!</p>
+                                            <p class="card-description">42.</p>
                                         </div>
                                     </div>
                                 </div>
