--- a/team.html
+++ b/team.html
@@ -675,12 +675,11 @@
                             </li>
                         </ul>
                     </nav>
-                    <div class="copyright float-left ">
-                        &copy;
-                        <script>
-                            document.write(new Date().getFullYear())
-                        </script>, created by JetFreaKk and amanarora9848.
-                    </div>
+                    <div class="copyright float-right">
+                            &copy;
+                           2018, made by
+                            <a href="http://kartikbajaj.xyz" target="_blank">JeTFreaKK</a> and <a href="#" target="_blank">Aman Arora</a>.
+                          </div>
                 </div>
             </footer>
             <!--   Core JS Files   -->
