--- a/team.html
+++ b/team.html
@@ -114,8 +114,9 @@
                                             <small class="card-description text-muted">General Secretary</small>
                                         </h4>
                                         <div class="card-body">
-                                            <p class="card-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores amet maxime velit, quae aliquam eveniet nostrum iure, porro labore accusantium eligendi laudantium soluta voluptatibus perspiciatis ea provident
-                                                officia. Corrupti, possimus!</p>
+                                            <p class="card-description">
+                                                    You don't have to be great to start but you have to start to be great
+                                            </p>
                                         </div>
                                     </div>
                                 </div>
