--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <ul class="navbar-nav ml-auto">
           <li class="dropdown nav-item">
             <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">
-              <i class="material-icons">apps</i>Menu
+              <i class="material-icons">apps</i>Explore
             </a>
             <div class="dropdown-menu dropdown-with-icons">
               <a href="./team.html" class="dropdown-item">
@@ -127,7 +127,15 @@
           <div class="row">
             <div class="col-md-4">
               <div class="card" style="width: 20rem;">
-                <img class="card-img-top" src="https://images.unsplash.com/photo-1517303650219-83c8b1788c4c?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=bd4c162d27ea317ff8c67255e955e3c8&auto=format&fit=crop&w=2691&q=80" alt="Card image cap">
+                <img class="card-img-top" src="assets/events/elementos." alt="Elementos">
+                <div class="card-body">
+                  <p class="card-text">Week long Technical Fest comprising of Workshops and Competitions.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="card" style="width: 20rem;">
+                <img class="card-img-top" src="assets/events/" alt="Society Fair">
                 <div class="card-body">
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
@@ -135,15 +143,7 @@
             </div>
             <div class="col-md-4">
               <div class="card" style="width: 20rem;">
-                <img class="card-img-top" src="https://images.unsplash.com/photo-1517303650219-83c8b1788c4c?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=bd4c162d27ea317ff8c67255e955e3c8&auto=format&fit=crop&w=2691&q=80" alt="Card image cap">
-                <div class="card-body">
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4">
-              <div class="card" style="width: 20rem;">
-                <img class="card-img-top" src="https://images.unsplash.com/photo-1517303650219-83c8b1788c4c?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=bd4c162d27ea317ff8c67255e955e3c8&auto=format&fit=crop&w=2691&q=80" alt="Card image cap">
+                <img class="card-img-top" src="assets/events/" alt="Orientation">
                 <div class="card-body">
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
@@ -217,7 +217,7 @@
       <div class="copyright float-right">
         &copy;
        2018, made by
-        <a href="#" target="_blank">Aman Arora</a> and <a href="#" target="_blank">Himalaya Kathpal</a>.
+        <a href="http://kartikbajaj.xyz" target="_blank">JeTFreaKK</a> and <a href="#" target="_blank">Aman Arora</a>.
       </div>
     </div>
   </footer>
