--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
           <div class="row">
             <div class="col-md-4">
               <div class="card" style="width: 20rem;">
-                <img class="card-img-top" src="assets/events/elementos." alt="Elementos">
+                <img class="card-img-top" src="assets/events/flexfinal.jpg" alt="Elementos">
                 <div class="card-body">
                   <p class="card-text">Week long Technical Fest comprising of Workshops and Competitions.</p>
                 </div>
