--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
           <div class="row">
             <div class="col-md-4">
               <div class="card" style="width: 20rem;">
-                <img class="card-img-top" src="assets/events/flexfinal.jpg" alt="Elementos">
+                <img class="card-img-top" src="assets/img/events/flexfinal.jpg" alt="Elementos">
                 <div class="card-body">
                   <p class="card-text">Week long Technical Fest comprising of Workshops and Competitions.</p>
                 </div>
@@ -135,17 +135,17 @@
             </div>
             <div class="col-md-4">
               <div class="card" style="width: 20rem;">
-                <img class="card-img-top" src="assets/events/" alt="Society Fair">
+                <img class="card-img-top" src="assets/img/events/sfair.jpg" alt="Society Fair">
                 <div class="card-body">
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <p class="card-text">The first interaction with the freshers which helps us spread our message of the need of innovation and invention the field of Electronics.</p>
                 </div>
               </div>
             </div>
             <div class="col-md-4">
               <div class="card" style="width: 20rem;">
-                <img class="card-img-top" src="assets/events/" alt="Orientation">
+                <img class="card-img-top" src="assets/img/events/ardwkshp.jpg" alt="Arduino">
                 <div class="card-body">
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <p class="card-text">Workshop of Arduino Basics.</p>
                 </div>
               </div>
             </div>
