Forgot the commit Number

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
               <div class="card" style="width: 20rem;">
                 <img class="card-img-top" src="assets/img/events/flexfinal.jpg" alt="Elementos">
                 <div class="card-body">
-                  <p class="card-text">Week long Technical Fest comprising of Workshops and Competitions.</p>
+                  <p class="card-text">Week long Technical Fest held in even semester comprising of Workshops and Competitions.</p>
                 </div>
               </div>
             </div>
@@ -143,9 +143,9 @@
             </div>
             <div class="col-md-4">
               <div class="card" style="width: 20rem;">
-                <img class="card-img-top" src="assets/img/events/ardwkshp.jpg" alt="Arduino">
+                <img class="card-img-top" src="assets/img/events/ardwkshp.jpeg" alt="Arduino">
                 <div class="card-body">
-                  <p class="card-text">Workshop of Arduino Basics.</p>
+                  <p class="card-text">Workshop of Arduino and Electronics Basics held only for IETE Memebers.</p>
                 </div>
               </div>
             </div>
