--- a/team.html
+++ b/team.html
@@ -96,31 +96,30 @@
                                         </h4>
                                         <div class="card-body">
                                             <p class="card-description">
-                                                    Set your worthwhile goals, work hard and be the best version of you.
-                                                    That's all
+                                                    Set your worthwhile goals, work hard and be the best version of you. That's all
                                             </p>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-md-6">
-                                <div class="team-player">
-                                    <div class="card card-plain">
-                                        <div class="col-md-6 ml-auto mr-auto">
-                                            <img src="assets/img/sanchittanwar.jpg" alt="Thumbnail Image" class="img-raised rounded-circle img-fluid">
-                                        </div>
-                                        <h4 class="card-title">Sanchit Tanwar
-                                            <br>
-                                            <small class="card-description text-muted">General Secretary</small>
-                                        </h4>
-                                        <div class="card-body">
-                                            <p class="card-description">
-                                                    You don't have to be great to start but you have to start to be great
-                                            </p>
+                                    <div class="team-player">
+                                        <div class="card card-plain">
+                                            <div class="col-md-6 ml-auto mr-auto">
+                                                <img src="assets/img/ankitgarg.jpg" alt="Thumbnail Image" class="img-raised rounded-circle img-fluid">
+                                            </div>
+                                            <h4 class="card-title">Ankit Garg
+                                                <br>
+                                                <small class="card-description text-muted">General Secretary</small>
+                                            </h4>
+                                            <div class="card-body">
+                                                <p class="card-description">
+                                                        Set your worthwhile goals, work hard and be the best version of you. That's all
+                                                </p>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
-                            </div>
                         </div>
                     </div>
                 </div>
@@ -215,8 +214,9 @@
                                                         <small class="card-description text-muted ">Technical Head</small>
                                                     </h4>
                                                     <div class="card-body ">
-                                                        <p class="card-description ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae temporibus rem eaque excepturi totam, incidunt reiciendis sit repellendus aperiam fugit!</p>
-                                                    </div>
+                                                        <p class="card-description ">
+                                                                However difficult life may seem, there is always something you can do and succeed at it. 
+                                                        </div>
 
                                                 </div>
                                             </div>
