--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
               <div class="card" style="width: 20rem;">
                 <img class="card-img-top" src="assets/img/events/sfair.jpg" alt="Society Fair">
                 <div class="card-body">
-                  <p class="card-text">The first interaction with the freshers which helps us spread our message of the need of innovation and invention the field of Electronics.</p>
+                  <p class="card-text">The first interaction with the freshers which helps us spread our message of the need of innovation in the field of Electronics.</p>
                 </div>
               </div>
             </div>
@@ -145,7 +145,7 @@
               <div class="card" style="width: 20rem;">
                 <img class="card-img-top" src="assets/img/events/ardwkshp.jpeg" alt="Arduino">
                 <div class="card-body">
-                  <p class="card-text">Workshop of Arduino and Electronics Basics held only for IETE Memebers.</p>
+                  <p class="card-text">Workshop of Arduino and Electronics Basics held only for IETE Memebers. To be held on 16th and 17th October.</p>
                 </div>
               </div>
             </div>
