--- a/team.html
+++ b/team.html
@@ -551,7 +551,7 @@
                                         <div class="card card-plain ">
                                             <div class="col-md-6 ml-auto mr-auto ">
                                                 <img src="assets/img/satti.jpeg " alt="Thumbnail Image " class="img-raised rounded-circle img-fluid ">
-                                            </div> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &
+                                            </div> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
                                             <h4 class="card-title ">Piyush Satti</h4>
 
                                         </div>
