Contact Us Section Removed

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               <a href="./team.html" class="dropdown-item">
                 <i class="material-icons">layers</i>Team Members
               </a>
-              <a href="" class="dropdown-item">
+              <a href="#" class="dropdown-item">
                 <i class="material-icons">content_paste</i>Contact Us
               </a>
             </div>
