--- a/team.html
+++ b/team.html
@@ -106,15 +106,15 @@
                                     <div class="team-player">
                                         <div class="card card-plain">
                                             <div class="col-md-6 ml-auto mr-auto">
-                                                <img src="assets/img/ankitgarg.jpg" alt="Thumbnail Image" class="img-raised rounded-circle img-fluid">
+                                                <img src="assets/img/sanchittanwar.jpg" alt="Thumbnail Image" class="img-raised rounded-circle img-fluid">
                                             </div>
-                                            <h4 class="card-title">Ankit Garg
+                                            <h4 class="card-title">Sanchit Tanwar
                                                 <br>
                                                 <small class="card-description text-muted">General Secretary</small>
                                             </h4>
                                             <div class="card-body">
                                                 <p class="card-description">
-                                                        Set your worthwhile goals, work hard and be the best version of you. That's all
+                                                        You don't have to be great to start but you have to start to be great
                                                 </p>
                                             </div>
                                         </div>
