--- a/team.html
+++ b/team.html
@@ -651,38 +651,39 @@
 
 
             <!--  End Modal -->
-            <footer class="footer " data-background-color="black ">
-                <div class="container ">
-                    <nav class="float-left ">
+            <footer class="footer" data-background-color="black">
+                    <div class="container">
+                      <nav class="float-left">
                         <ul>
-                            <li>
-
-                            </li>
-                            <li>
-                                <a href="index.html ">
-                                            About Us
-                                             &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-                                        </a>
-                            </li>
-                            <li>
-                                <a href=" ">
-
-                                </a>
-                            </li>
-                            <li>
-                                <a href=" ">
-
-                                </a>
-                            </li>
+                          <li>
+                            <a href="index.html">
+                              IETE
+                            </a>
+                          </li>
+                          <li>
+                            <a href="#">
+                              About Us
+                            </a>
+                          </li>
+                          <li>
+                            <a href="#">
+                              Projects
+                            </a>
+                          </li>
+                          <li>
+                            <a href="#">
+                              Events
+                            </a>
+                          </li>
                         </ul>
-                    </nav>
-                    <div class="copyright float-right">
-                            &copy;
-                           2018, made by
-                            <a href="http://kartikbajaj.xyz" target="_blank">JeTFreaKK</a> and <a href="#" target="_blank">Aman Arora</a>.
-                          </div>
-                </div>
-            </footer>
+                      </nav>
+                      <div class="copyright float-right">
+                        &copy;
+                       2018, made by
+                        <a href="http://kartikbajaj.xyz" target="_blank">JeTFreaKK</a> and <a href="#" target="_blank">Aman Arora</a>.
+                      </div>
+                    </div>
+                  </footer>
             <!--   Core JS Files   -->
             <script src="./assets/js/core/jquery.min.js " type="text/javascript "></script>
             <script src="./assets/js/core/popper.min.js " type="text/javascript "></script>
@@ -772,4 +773,4 @@
             </script>
 </body>
 
-</html>z
+</html>
