--- a/index.html
+++ b/index.html
@@ -43,8 +43,20 @@
                 <i class="material-icons">layers</i>Team Members
               </a>
               <a href="#" class="dropdown-item">
-                <i class="material-icons">content_paste</i>Contact Us
+                <i class="material-icons">insert_invitation</i>Events
               </a>
+              <a href="#" class="dropdown-item">
+                  <i class="material-icons">nnouncement</i>Announcements
+                </a>
+                <a href="#" class="dropdown-item">
+                    <i class="material-icons">build</i>Projects
+                  </a>
+                  <a href="#" class="dropdown-item">
+                      <i class="material-icons">book</i>Library
+                    </a>
+                  <a href="#" class="dropdown-item">
+                      <i class="material-icons">content_paste</i>Contact Us
+                    </a>
             </div>
           </li>
           
