--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <i class="material-icons">insert_invitation</i>Events
               </a>
               <a href="#" class="dropdown-item">
-                  <i class="material-icons">nnouncement</i>Announcements
+                  <i class="material-icons">announcement</i>Announcements
                 </a>
                 <a href="#" class="dropdown-item">
                     <i class="material-icons">build</i>Projects
