--- a/team.html
+++ b/team.html
@@ -20,52 +20,60 @@
 </head>
 
 <body class="index-page sidebar-collapse">
-    <nav class="navbar navbar-transparent navbar-color-on-scroll fixed-top navbar-expand-lg" color-on-scroll="100" id="sectionsNav">
-        <div class="container">
-            <div class="navbar-translate">
-                <a class="navbar-brand" href="/index.html">
-                        Institution of Electronics and Telecommunication Engineers
-                </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="navbar-toggler-icon"></span>
-          <span class="navbar-toggler-icon"></span>
-          <span class="navbar-toggler-icon"></span>
-        </button>
-            </div>
-            <div class="collapse navbar-collapse">
-                <ul class="navbar-nav ml-auto">
-                    <li class="dropdown nav-item">
-
+        <nav class="navbar navbar-transparent navbar-color-on-scroll fixed-top navbar-expand-lg" color-on-scroll="100" id="sectionsNav">
+                <div class="container">
+                  <div class="navbar-translate">
+                    <a class="navbar-brand" href="#">
+                        Institution of Electronics and Telecommunication Engineers</a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" aria-expanded="false" aria-label="Toggle navigation">
+                      <span class="sr-only">Toggle navigation</span>
+                      <span class="navbar-toggler-icon"></span>
+                      <span class="navbar-toggler-icon"></span>
+                      <span class="navbar-toggler-icon"></span>
+                    </button>
+                  </div>
+                  <div class="collapse navbar-collapse">
+                    <ul class="navbar-nav ml-auto">
+                      <li class="dropdown nav-item">
+                        <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">
+                          <i class="material-icons">apps</i>Explore
+                        </a>
                         <div class="dropdown-menu dropdown-with-icons">
-                            <a href="./index.html" class="dropdown-item">
-                                <i class="material-icons">layers</i> All Components
+                          <a href="./team.html" class="dropdown-item">
+                            <i class="material-icons">layers</i>Team Members
+                          </a>
+                          <a href="#" class="dropdown-item">
+                            <i class="material-icons">insert_invitation</i>Events
+                          </a>
+                          <a href="#" class="dropdown-item">
+                              <i class="material-icons">announcement</i>Announcements
                             </a>
-                            <a href="https://demos.creative-tim.com/material-kit/docs/2.0/getting-started/introduction.html" class="dropdown-item">
-                                <i class="material-icons">content_paste</i> Documentation
-                            </a>
+                            <a href="#" class="dropdown-item">
+                                <i class="material-icons">build</i>Projects
+                              </a>
+                              <a href="#" class="dropdown-item">
+                                  <i class="material-icons">book</i>Library
+                                </a>
+                              <a href="#" class="dropdown-item">
+                                  <i class="material-icons">content_paste</i>Contact Us
+                                </a>
                         </div>
-                    </li>
-                    <li class="nav-item">
-                        <!--<a class="nav-link" href="javascript:void(0)" onclick="scrollToDownload()">
-                            <i class="material-icons">cloud_download</i> Download
-                        </a>-->
-                    </li>
-
-                    <li class="nav-item">
-                        <a class="nav-link" rel="tooltip" title="" data-placement="bottom" href="https://www.facebook.com/tuececlub/" target="_blank" data-original-title="Like us on Facebook">
-                            <i class="fa fa-facebook-square"></i>
+                      </li>
+                      
+                      <li class="nav-item">
+                        <a class="nav-link" rel="tooltip" title="" data-placement="bottom" href="https://www.facebook.com/TUECECLUB/" target="_blank" data-original-title="Like us on Facebook">
+                          <i class="fa fa-facebook-square"></i>
                         </a>
-                    </li>
-                    <li class="nav-item">
+                      </li>
+                      <li class="nav-item">
                         <a class="nav-link" rel="tooltip" title="" data-placement="bottom" href="https://www.instagram.com/ietetu/" target="_blank" data-original-title="Follow us on Instagram">
-                            <i class="fa fa-instagram"></i>
+                          <i class="fa fa-instagram"></i>
                         </a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </nav>
     <div class="page-header header-filter clear-filter purple-filter" data-parallax="true" style="background-image: url('./assets/img/bg2.jpg'); height: 50vh;">
         <div class="container">
             <div class="row">
