--- a/team.html
+++ b/team.html
@@ -23,7 +23,7 @@
         <nav class="navbar navbar-transparent navbar-color-on-scroll fixed-top navbar-expand-lg" color-on-scroll="100" id="sectionsNav">
                 <div class="container">
                   <div class="navbar-translate">
-                    <a class="navbar-brand" href="#">
+                    <a class="navbar-brand" href="index.html">
                         Institution of Electronics and Telecommunication Engineers</a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" aria-expanded="false" aria-label="Toggle navigation">
                       <span class="sr-only">Toggle navigation</span>
