--- a/team.html
+++ b/team.html
@@ -24,7 +24,7 @@
                 <div class="container">
                   <div class="navbar-translate">
                     <a class="navbar-brand" href="index.html">
-                        Institution of Electronics and Telecommunication Engineers</a>
+                        IETE</a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" aria-expanded="false" aria-label="Toggle navigation">
                       <span class="sr-only">Toggle navigation</span>
                       <span class="navbar-toggler-icon"></span>
