--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
               <i class="material-icons">apps</i>Explore
             </a>
             <div class="dropdown-menu dropdown-with-icons">
-              <a href="./team.html" class="dropdown-item">
+              <a href="./teamtest.html" class="dropdown-item">
                 <i class="material-icons">layers</i>Team Members
               </a>
               <a href="#" class="dropdown-item">
